# automatic-waddle

./: .gitignore  CMakeLists.txt  Makefile  README.md  ast.c  ast.h  buffer.c  buffer.h  main.c  operator.c  operator.h  parse_context.c  parse_context.h  parseaction.c  parseaction.h  parser.c  parser.h  stack.c  stack.h
test/: CMakeLists.txt  Makefile  test.c  test_ast.c  test_buffer.c  test_integration.c  test_parsecontext.c  test_parser.c  test_stack.c  test_traverse.c
